--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
     100% { opacity:1; }
 }
 .im{
-    font-family: "Raleway";
+    font-family: Raleway;
     font-size: 60px;
-    align-items: center;
+
 }
