--- a/styles.css
+++ b/styles.css
@@ -22,5 +22,10 @@
 .im{
     font-family: Raleway;
     font-size: 60px;
+    font-style: normal;
+    font-variant: normal;
+    font-weight: 500;
+    line-height: 26.4px;
+}
 
 }
