--- a/styles.css
+++ b/styles.css
@@ -20,12 +20,10 @@
     100% { opacity:1; }
 }
 .im{
-    font-family: Raleway;
+    font-family: 'Raleway';
     font-size: 60px;
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
     line-height: 26.4px;
-}
-
 }
