--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+  padding: 0;
+  margin: 0;
+}
 .typed-cursor{
     opacity: 1;
     -webkit-animation: blink 0.7s infinite;
@@ -26,4 +30,26 @@
     font-variant: normal;
     font-weight: 500;
     line-height: 26.4px;
+    color: white;
+    padding-top: 80px;
+    background-color: grey;
+    min-width: 100%;
+}
+.img{
+  border-radius: 50%;
+  padding-top: 0px;
+  height: 150px;
+  width: 150px;
+
+}
+.outerDiv {
+    display: inline-flex;  <== This is responsible for vertical alignment
+    height: 400px;
+    color: white;
+    margin-left: 50px;
+    margin-top: 150px;
+}
+
+.innerDiv {
+    margin: auto 5px;   <== This is responsible for vertical alignment
 }
