--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@
     color: white;
     padding-top: 80px;
     background-color: grey;
-    min-width: 100%;
+    height: 160px;
 }
 .img{
   border-radius: 50%;
