--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@
   padding: 0;
   margin: 0;
 }
+body{
+  font-family: 'Raleway';
+  font-size: 20px;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 900;
+  line-height: 26.4px;
+}
 .typed-cursor{
     opacity: 1;
     -webkit-animation: blink 0.7s infinite;
@@ -49,7 +57,14 @@
     margin-left: 50px;
     margin-top: 150px;
 }
-
 .innerDiv {
     margin: auto 5px;   <== This is responsible for vertical alignment
+}
+p .about{
+  float: right;
+}
+.about{
+  margin-left: 400px;
+  padding-top: 80px;
+  margin-right: 20px;
 }
