--- a/styles.css
+++ b/styles.css
@@ -39,9 +39,9 @@ body{
     font-weight: 500;
     line-height: 26.4px;
     color: white;
-    padding-top: 80px;
-    background-color: grey;
-    height: 160px;
+    padding-top: 150px;
+    height: 655px;
+
 }
 .img{
   border-radius: 50%;
@@ -49,7 +49,7 @@ body{
   height: 150px;
   width: 150px;
   float: left;
-
+  max-width: 100%;
 }
 .outerDiv {
     display: inline-flex;  <== This is responsible for vertical alignment
@@ -65,7 +65,37 @@ p .about{
   float: right;
 }
 .about{
-  margin-left: 400px;
+  /*margin-left: 400px;
   padding-top: 80px;
   margin-right: 20px;
+  margin-bottom: 20px;*/
+  width: 65%;
+  float: right;
+  padding-top: 80px;
+  padding-right: 15px;
+  padding-bottom: 15px;
 }
+.imbackground{
+  display: table;
+  width: 100%;
+  background: url('img/milwaukee.jpg');
+  background-position: center top;
+  height: 350px;
+  color: white;
+}
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
