--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body{
     font-style: normal;
     font-variant: normal;
     font-weight: 500;
-    line-height: 26.4px;
+    line-height: 36.4px;
     color: white;
     padding-top: 150px;
     height: 655px;
@@ -63,12 +63,20 @@ body{
 }
 p .about{
   float: right;
+  line-height: 0px;
 }
 .about{
   /*margin-left: 400px;
-  padding-top: 80px;
+
   margin-right: 20px;
   margin-bottom: 20px;*/
+  width: 65%;
+  float: right;
+  padding-top: 80px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+}
+.aboutname{
   width: 65%;
   float: right;
   padding-top: 80px;
@@ -80,12 +88,13 @@ p .about{
   width: 100%;
   background: url('img/milwaukee.jpg');
   background-position: center top;
-  height: 350px;
   color: white;
+  height:100%;
+  width:auto;
 }
 [class*="col-"] {
     float: left;
-    padding: 15px;
+    padding: 0px;
 }
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
