--- a/styles.css
+++ b/styles.css
@@ -109,3 +109,8 @@ p .about{
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
+@media screen and (min-width: 480px) {
+    body {
+        background-color: lightgreen;
+    }
+}
