--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,6 @@ p .about{
 .col-12 {width: 100%;}
 @media screen and (min-width: 480px) {
     body {
-        background-color: lightgreen;
+        background-color: ;
     }
 }
