--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body{
 }
 .img{
   border-radius: 50%;
-  margin-top: 80px;
+  margin-top: 60px;
   height: 150px;
   width: 150px;
   float: left;
@@ -72,20 +72,26 @@ body{
 p .about{
   float: right;
   line-height: 0px;
+  padding-left: 65%;
+}
+p .contact{
+  padding-top: 30px;
 }
 .about{
-  width: 65%;
+  width: 100%;
   float: right;
-  padding-top: 80px;
+  padding-top: 50px;
   padding-right: 1px;
   padding-bottom: 30px;
+  padding-left: 85%;
+  margin-left: 600px;
   color: black;
   background-color: white;
 }
 .aboutname{
-  width: 59%;
+  width: 64%;
   float: right;
-  padding-top: 80px;
+  padding-top: 10px;
   padding-right: 15px;
   padding-bottom: 15px;
 }
@@ -97,8 +103,12 @@ p .about{
   color: white;
   height:100%;
   width: auto;
-  max-height: 900px;
   background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+.white{
+  background-color: white;
+  width: 100%;
 }
 .contact{
   background-color: transparent;
@@ -106,6 +116,9 @@ p .about{
 }
 .header{
 
+}
+.work{
+  padding-top: 30px
 }
 [class*="col-"] {
     float: left;
