--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ body{
 p .about{
   float: right;
   line-height: 0px;
-  padding-left: 65%;
+  padding-right: 200px;
 }
 p .contact{
   padding-top: 30px;
