--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ body{
   width: 150px;
   float: left;
   max-width: 100%;
+  /*margin-left: 60%;*/
 }
 .outerDiv {
     display: inline-flex;  <== This is responsible for vertical alignment
@@ -73,6 +74,7 @@ p .about{
   float: right;
   line-height: 0px;
   padding-left: 65%;
+  margin-left: 600px;
 }
 p .contact{
   padding-top: 30px;
@@ -94,6 +96,7 @@ p .contact{
   padding-top: 10px;
   padding-right: 15px;
   padding-bottom: 15px;
+  margin-left: 64%;
 }
 .imbackground{
   display: table;
