--- a/styles.css
+++ b/styles.css
@@ -53,12 +53,13 @@ body{
 }
 .img{
   border-radius: 50%;
-  margin-top: 60px;
   height: 150px;
   width: 150px;
   float: left;
   max-width: 100%;
-  /*margin-left: 60%;*/
+  margin-bottom: auto;
+  margin-top: 50px;
+  margin-left: 37%
 }
 .outerDiv {
     display: inline-flex;  <== This is responsible for vertical alignment
@@ -70,31 +71,40 @@ body{
 .innerDiv {
     margin: auto 5px;   <== This is responsible for vertical alignment
 }
-
-p .about{
+h1.headline {
+  font-size: 40px;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  padding-left: 55%
+}
+p.about{
   float: right;
   line-height: 0px;
   padding-left: 65%;
   margin-left: 600px;
+  background-color: white;
 }
 p .contact{
   padding-top: 30px;
 }
 .about{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
-  height: 500px;
-  padding-top: 50px;
-  padding-bottom: 30px;
-  color: black;
+  height: 100%;
+  min-height: 100%;
   background-color: white;
+  color: black;
 }
 .aboutname{
-  width: 64%;
+  width: 67%;
   float: right;
   padding-top: 10px;
   padding-right: 15px;
   padding-bottom: 15px;
   margin-left: 64%;
+
 }
 .imbackground{
   display: table;
@@ -120,6 +130,16 @@ padding-top: ;
 }
 .work{
   padding-top: 30px
+}
+.column {
+    display: table-cell;
+    width: 100%;
+}
+.abouttxt{
+    margin-top: 20px;
+    padding-left: 55%;
+    padding-bottom: 30px;
+    padding-right: 10px;
 }
 [class*="col-"] {
     float: left;
