--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,10 @@ p.about{
   margin-left: 600px;
   background-color: white;
 }
+p.footer{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 h1.contact{
   margin-top: 30px;
   color: black;
@@ -146,15 +150,9 @@ padding-top: 30px;
 }
 .icons{
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 .git{
-}
-.i:hover{
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  transition: all 1s ease;
-  background-color: rgba(30, 150, 30, 0.5);
 }
 .cog1{
   padding-right: 20px;
@@ -170,6 +168,43 @@ padding-top: 30px;
   padding-bottom: 20px;
   background-color: rgba(189, 189, 189, .5);
   z-index: -1;
+}
+a{
+  color: inherit;
+}
+.fa-github-square:hover{
+    color: #373737;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+.fa-twitter-square:hover{
+    color: #373737;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+.fa-reddit-square:hover{
+    color: #373737;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+.fa-envelope-square:hover{
+    color: #373737;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.5s;
+}
+.footer{
 }
 [class*="col-"] {
     float: left;
