--- a/styles.css
+++ b/styles.css
@@ -229,19 +229,20 @@ p.do{
 .col-10 {width: 83.33%;}
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
-@media screen and (min-width: 480px) {
+@media screen and (max-device-width: 480px) {
     body {
-        background-color: ;
+        background-color: grey;
+    }
+    html{
+      font-size: 11px;
     }
 }
-html{
-  font-size: 11px;
-}
+
 @media screen only and (min-width: 600px){
   html{
     font-size: 120%;
   }
   .whatido{
-    background: url('img/milwaukee.jpg');
+    background: url('img/milwaukee.jpg');@
   }
 }
