Found out how to do @media

--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ p.do{
 .col-12 {width: 100%;}
 @media screen and (max-device-width: 480px) {
     body {
-        background-color: grey;
+        font-size: 11px;
     }
     html{
       font-size: 11px;
