--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,17 @@ p.do{
     }
     .whatido{
       background: url('img/milwaukee.jpg');
-      background-color: rgba(0, 0, 0, 0.46);
+      background-color: rgba(40, 40, 40, 0.5);
+    }
+    .img{
+      border-radius: 50%;
+      height: 150px;
+      width: 150px;
+      float: left;
+      max-width: 100%;
+      margin-bottom: auto;
+      margin-top: 30px;
+      margin-left: 37%;
+      width: 100%;
     }
 }
