--- a/styles.css
+++ b/styles.css
@@ -231,21 +231,10 @@ p.do{
 .col-12 {width: 100%;}
 @media screen and (max-device-width: 480px) {
     body {
-        font-weight: bold;
+        font-family:
     }
     .whatido{
-      background: url('img/milwaukee.jpg');
+      background: url('img/milwaukee1.jpg');
       background-color: rgba(40, 40, 40, 0.5);
-    }
-    .img{
-      border-radius: 50%;
-      height: 150px;
-      width: 150px;
-      float: left;
-      max-width: 100%;
-      margin-bottom: auto;
-      margin-top: 30px;
-      margin-left: 37%;
-      width: 100%;
     }
 }
