--- a/styles.css
+++ b/styles.css
@@ -236,5 +236,8 @@ p.do{
     .whatido{
       background: url('img/milwaukee1.jpg');
       background-color: rgba(40, 40, 40, 0.5);
+      background-position: center top;
+      background-repeat: no-repeat;
+      width: 100%;
     }
 }
