Maybe the image will look good this time

--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ p.do{
     .whatido{
       background: url('img/milwaukee1.jpg');
       background-color: rgba(40, 40, 40, 0.5);
-      background-position: center top;
+      background-position: center;
       background-repeat: no-repeat;
       width: 100%;
     }
