--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,17 @@ p.do{
     animation-duration: 3.1s;
     animation-delay: .9;
 }
-
+.portfolio{
+  background-color: white;
+  color: black;
+}
+.portfolioimg{
+  float: left;
+  width:100 px;
+}
+.portflio a:hover{
+  background-color: rgb(0, 191, 255, .5);
+}
 [class*="col-"] {
     float: left;
     padding: 0px;
