--- a/styles.css
+++ b/styles.css
@@ -312,6 +312,20 @@ p.do{
     float: left;
     padding: 0px;
 }
+.anouncement{
+  width: 100%;
+  height: 50px;
+  background-color: green;
+  margin: 0px;
+  text-align: center;
+}
+p.anouncement{
+  color: black;
+  padding-top: 16px;
+}
+.blog{
+  padding: 2%;
+}
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 25%;}
